# globalgamejam2025

./: Cargo.toml  README.md
assets/3d/environment/: rocks-a.glb  rocks-b.glb  rocks-c.glb
src/: camera.rs  collision.rs  main.rs  map.rs  ship.rs  ui.rs
