[package]
name = "haverie"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.15.1", features = ["dynamic_linking"] }
bevy_water = "0.15.2"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
